# praktikum2023

./: .gitignore  CMakeLists.txt  Data.k  Data_0.5.k  THE_MESH.k  analitgraph.py  data.svtu  eigentest.cpp  graph.gp  main.cpp  mesh.k  mesh.k.old  mesh.k.old-2  my_task_00025.k  my_task_00025.k_graph.txt  my_task_0005.k  my_task_0005.k_graph.txt  my_task_001.k  my_task_001.k_graph.txt  my_task_1.k  my_task_1.k_graph.txt  my_task_hard.k  my_task_hard.k_graph.txt  sigmaanalyt.gp  versh.code-workspace
